--- a/app/src/main/res/drawable/custom_divider_item_decoration.xml
+++ b/app/src/main/res/drawable/custom_divider_item_decoration.xml
@@ -6,6 +6,6 @@
         android:width="1dp"
         android:height="1dp" />
 
-    <solid android:color="@color/greenMM" />
+    <solid android:color="@color/colorPrimary" />
 
 </shape>
