--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="whiteTransparent">#88FFFFFF</color>
 
     <color name="grayLight">#E6E6E6</color>
+    <color name="gray">#888</color>
     <color name="grayMMTransparent">#88414141</color>
     <color name="grayMM">#414141</color>
     <color name="greyMMTransparent">#88414141</color>
