--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="whiteDark">#EEEEEE</color>
     <color name="whiteTransparent">#88FFFFFF</color>
 
-    <color name="grayLight">#E6E6E6</color>
-    <color name="gray">#888</color>
+    <color name="grayLight">#EEE</color>
+    <color name="gray">#999</color>
     <color name="grayMMTransparent">#88414141</color>
     <color name="grayMM">#414141</color>
     <color name="greyMMTransparent">#88414141</color>
