--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,6 @@
 
     <!-- OLD GAMES -->
     <dimen name="cardCornerRadius">2dp</dimen>
+    <dimen name="cardview_oldgame_height">256dp</dimen>
 
 </resources>
