--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
-    android:id="@+id/dlMain"
+    android:id="@+id/drawerLayoutMain"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,12 +11,12 @@
     tools:openDrawer="start">
 
     <FrameLayout
-        android:id="@+id/flMain"
+        android:id="@+id/frameLayoutMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/nvMain"
+        android:id="@+id/navigationViewMain"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end"
