--- a/app/src/main/res/layout/oldgames_fragment.xml
+++ b/app/src/main/res/layout/oldgames_fragment.xml
@@ -22,7 +22,7 @@
             app:layout_scrollFlags="scroll|enterAlways"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            tools:ignore="UnusedAttribute"/>
+            tools:ignore="UnusedAttribute" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -38,7 +38,6 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerViewOldGames"
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/whiteDark"
@@ -110,7 +109,7 @@
         android:layout_height="wrap_content"
         android:tint="@android:color/white"
         android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/standard_margin"
         android:src="@drawable/ic_add_white"/>
 
 </android.support.design.widget.CoordinatorLayout>
