--- a/app/src/main/res/layout/newgame_fragment.xml
+++ b/app/src/main/res/layout/newgame_fragment.xml
@@ -32,7 +32,17 @@
         app:maxRows="3"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabNewGame"
+        android:id="@+id/fabNewGameCreatePlayer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:tint="@android:color/white"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="@dimen/standard_margin"
+        android:src="@drawable/ic_add_white"
+        android:visibility="visible"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabNewGameStartGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tint="@android:color/white"
