--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#007B49</color>
     <color name="colorPrimaryTransparent">#8800B16A</color>
     <color name="colorPrimaryDarkTransparent">#88007B49</color>
-    <color name="colorAccent">#7c4dff</color>
+    <color name="colorAccent">#ff4e95</color>
 
     <color name="whiteDark">#EEEEEE</color>
     <color name="whiteTransparent">#88FFFFFF</color>
